Add eslint to project

--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   "homepage": "https://github.com/recleun/discord-bot-template#readme",
   "dependencies": {
     "discord.js": "^14.15.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0"
   }
 }
